[tool.poetry]
name = "pytorch-studying"
version = "0.1.0"
description = ""
authors = ["aragorn1025 <tzjie.dai@gmail.com>"]
readme = "README.md"
packages = [{include = "pytorch_studying"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
